--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: wizardry-tournament
-version: 1
+#application: wizardry-tournament
+#version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
